# StreetArtBot

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: config.py  main.py
bot/db/: connection.py  models.py  mongo_uri.py  queries.py
bot/handlers/: admin.py  excursions.py  quiz.py  start.py
bot/keyboards/: admin_kb.py  excursion_kb.py  main_kb.py
bot/middlewares/: user.py
bot/services/: broadcast.py  quiz.py
bot/utils/: callback_data.py  errors.py  media.py
