[project]
name = "street-art-bot"
version = "0.1.0"
description = "Telegram bot for street art walking tours (SpotBot / Место)"
readme = "README.md"
# Exclude 3.14+ until pydantic-core ships wheels; otherwise uv builds from source (needs gcc, Rust).
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-telegram-bot==21.9",
    "motor==3.6.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
